--- a/Raman/Raman/Controls/MainForm.resx
+++ b/Raman/Raman/Controls/MainForm.resx
@@ -124,18 +124,6 @@
     <value>259, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="tsbRefresh.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFGSURBVDhPrZI9SwQxEIansrLwo1DU/yCIKIIfnZ0gwnEf
-        yayFP8JWC0UtRRD1H1jf3SbZg+tsBRtLQRAVFQtRsNJJfD1huTXNPRB23tmZl0wS6g1st4jdV2cpd4M/
-        f5TO+4izYagCtFklbj4EkzyczZF2t6TtCjI52K0RN+7kO93VwKPNZNhdYpeRAZXWiDQ9hmZPkYHHm/ja
-        9fYAMoK225I8gfJnsoeoO9oeyjibUIJ2l6TSBag42s6SshdQQtW9U60+CBWn1O6ncuMZSmDzQRtmCCqO
-        N+D6G5TA5krOYAkqjh/Bj92B3a6YnEHFYXck9TtQQsWNUTl9pcTMIFOMSqek+UmucRQZoI2imr3/1yQ0
-        y2NTropMjsTqsBNtTyVeDG/f3w5n83JtxzL3S3HzL6o5IYUHsq5l1s+wfuJ9SlrjqOoVRN8kcIOT3ZSG
-        iAAAAABJRU5ErkJggg==
-</value>
-  </data>
   <data name="tsbOpenFiles.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
@@ -176,6 +164,17 @@
         7Owd3stgmuF4k88HkHdAYQJVignQbUbGX3Z6r/y/354FqhQTjGomUTMIXNxeX/N1o89bDM3AKAQZDlWG
         Hezfv59l8dZ9b5Zv2fzmw46gSyRpBoElW/baAQ34D8Krtm55DdT8lmjNIADU2A0zYNHGfW9B3iFaMwgs
         3rJvE8iQhdv22a9atYp4jWDAwAAA76tCgzJ7E/4AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="tsbPeakAnalysis.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAEZSURBVDhPY8AHSiwD/4PwBwEfFPxOwOvFB37vUKgy3ACH
+        Aas+8fiIQJXgBygG8Hk9fSfg6w+VIg7ADHjP7z31tbAfL1SYeAAzAMolHQysAabHvqSYnfj2H4K/J0OF
+        iQNmJ77om5z48g1mAJD93fTkVxOoNH5gc/iDoNmxL3cRtkPx8S8Pjc98IhD///8zARVvw9AMx193h676
+        zwxVjQkMtv7cb7T3J1yD0e5f/w13/ULwgXIG237ugypHBUa7flXprv/7X3fd3/9Ge36CNYPYYD6QDRID
+        84FqDHb8qINqgwCDHb+sdNf//gvTQBCv/fXPYNc/e7Bm/fX/BXQ3/PyKVSE+vOnXN4sd/4QYDDb9uolV
+        ARFYf+vvuwBu60SDu18ekgAAAABJRU5ErkJggg==
 </value>
   </data>
   <metadata name="statusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
