--- a/Raman/Raman/Controls/MainForm.resx
+++ b/Raman/Raman/Controls/MainForm.resx
@@ -173,22 +173,30 @@
         Aas+8fiIQJXgBygG8Hk+fSfg6w+VIg7ADHjP7z31tbAfL1SYeAAzAMolHQysAabHvqSYnfj2H4K/J0OF
         iQNmJ77oa5348A1mgP6J999NT341gUrjBzaHPwiaHft8F2E7FB//9ND4zCcC8f//PxNQ8TYMzXD8dXfo
         qv/MUNWYwGDrz/1Ge3/CNRjt/vXfcNcvBB8oZ7Dt5z6oclRgtOtXle76v/911/39b7TnJ1gziA3mA9kg
-        MTAfqMZgx486qDYIMNjxy0p3/bu/MA0E8YK3/wx2/bMHa9Zf/19Abemnr1gV4sFamz58s9jxT4jBYOOv
-        m9gUEIP1t/6+CwAJd0QXX+q/6QAAAABJRU5ErkJggg==
+        MTAfqMZgx486qDYIMNjxy0p3/eu/MA0E8dxX/wx2/bMHa9Zf/19Abemnr1gV4sFamz58s9jxT4jBYOOv
+        m9gUEIP1t/6+CwAEBEQOrDIEaQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="tsbCutOff.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAHESURBVDhPY6AYXAkNZTvu7Nx5zMnp2XEHh6fHnJ07QGJQ
-        acIApOGIg8NfIL0YhI84O/8DiUGl4aC+fiZXf/XSDT0lC353ly78D8KdpQv2MkBtXQxVx3Dc0XEJSAzK
-        BQOo5uNLpu36dvPi+/8rpuz6PqFqyQmQOIYB+z19dx5y8foxpX4VD4gPUtRTtezYUqDm25c//F8O1NxX
-        tfQMTB7iBaCzQTbv8/DeddzZ5f/GxNI/vZVgG0TwagYBUICBDAG5BGTzxqSyP3vX3/4/u2Prt57yRZ+X
-        TsejGR2AnVu2+Nis9s3fZrZt+r982p7/IM1Lpu39QVAzDICc3Ve59BNM87Kpe//3lS3+O61+jRJUCW4A
-        DzCos0Ga+yuXgKOsp2zhp2kVSwWhShEAOSGBwmBrWsWf2xffgqOqp3LhH1icT6pf86unfMFZDG+AYwGa
-        kA54+u4AxQLIEFA8NzfPk+0uWvhhQv2qX3s23v0/p2sHMGDRDMGVDkDeAfE7ymfygwJ2dvuWb1gNITYl
-        9lUsOT67fdu33Rvu/J/Vtfk7NJ1woSSk405OS8F5wcmpHaoXDkCKe8uXre8uRssLyAkJ6hoSciMDAwAN
-        z3hQPM3zvgAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAHDSURBVDhPY6AYXAkNZTvu7Nx5zMnp2XF7+6fHnJ07QGJQ
+        acIApOGgvf1fIL0YhA86O/8DiUGl4aC+fiZXf/XSDT2F8393ly78D8KdpQv2MkBtXQxVx3Dc0XEJSAzK
+        BQOo5uMLp+34dvPi+/8rJm7/PqFqyQmQOIYB+z19dx5y9PoxpX4VD4gPUtRTtezYIqDm25c//F8O1NxX
+        tfQMTB7iBaCzQTbv8/DeddzZ5f/GxNI/vZVgG0TwagYBUICBDAG5BGTzxqSyP3vX3/4/u3Xrt66S+Z8X
+        TcejGR2AnVu2+Nisls3fZrZt+r982p7/IM2Lp+39QVAzDICc3Ve59BNM87Kpe//3FS/+O61+jRJUCW4A
+        DzCos0Ga+yuXgKOsp2zhp2kVSwWhShEAOSGBwmBrWsWf2xffgqOqs3LeH1ic99ev+dVTvuAshjfAsQBN
+        SAc8fXeAYgFkCCiem5vnyXbnL/zQW7/q156Nd//Pbt/xDcMQXOkA5B0Qv6N8Jj8oYGe3bPmG1RBiU2Jf
+        xZLjs1u2fdu94c7/6V0bvkPTCRdKQjru5LQUnBecnNqheuEApLi3fNn67gK0vICckKCuISE3MjAAAL9N
+        d6bPJFFuAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="tsbSelectSpectra.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAB8SURBVDhPY1Btft8AxP8ZyAUgzdgM0F375z8xGKyYJgYM
+        IQALRJXG94ehQqQBmd5HnKpNH9KUmt9/hgqBAbYAw4aBLnj7UrX5XZVW/QchqF4wwKYYG4Z7YQjHBMWx
+        AAPoYYAtwLBhsGJsgYhNMTYM16zc/P4QVC8JgIEBACzz61B16642AAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="statusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
