Add Measure tool

--- a/Raman/Raman/Controls/MainForm.resx
+++ b/Raman/Raman/Controls/MainForm.resx
@@ -173,22 +173,22 @@
         Aas+8fiIQJXgBygG8Hk+fSfg6w+VIg7ADHjP7z31tbAfL1SYeAAzAMolHQysAabHvqSYnfj2H4K/J0OF
         iQNmJ77oa5348A1mgP6J999NT341gUrjBzaHPwiaHft8F2E7FB//9ND4zCcC8f//PxNQ8TYMzXD8dXfo
         qv/MUNWYwGDrz/1Ge3/CNRjt/vXfcNcvBB8oZ7Dt5z6oclRgtOtXle76v/911/39b7TnJ1gziA3mA9kg
-        MTAfqMZgx486qDYIMNjxy0p3/ZO/MA0E8bTH/wx2/bMHa9Zf/19Abemnr1gV4sFamz58s9jxT4jBYOOv
-        m9gUEIP1t/6+CwD3PkP5B+9O4gAAAABJRU5ErkJggg==
+        MTAfqMZgx486qDYIMNjxy0p3/YO/MA0E8aT7/wx2/bMHa9Zf/19Abemnr1gV4sFamz58s9jxT4jBYOOv
+        m9gUEIP1t/6+CwDv+kPtsZfrSAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="tsbCutOff.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAHBSURBVDhPY6AYXAkNZTvu7Nx5zMnp2XF7+6fHnJ07QGJQ
-        acIApGG/vf1fIL0YhHc5O/8DiUGl4aC+fiZXf/XSDT1Z8393ly78D8KdpQv2MkBtXQxVx3Dc0XEJSAzK
-        BQOo5uOzp+34dvPi+/8r+jd8n1C15ARIHMOA/Z6+Ow9Zef2YUr+KB8QHKeqpWnYMpPn25Q//lwM191Ut
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAHASURBVDhPY6AYXAkNZTvu7Nx5zMnp2XF7+6fHnJ07QGJQ
+        acIApGG/vf1fIL0YhLc5O/8DiUGl4aC+fiZXf/XSDT1p8393ly78D8KdpQv2MkBtXQxVx3Dc0XEJSAzK
+        BQOo5uOzp+34dvPi+/8r+td/n1C15ARIHMOA/Z6+Ow+Zef2YUr+KB8QHKeqpWnYMpPn25Q//lwM191Ut
         PQOTB3sB5GyQzfs8vHcdd3b5vzGx9E9vJdgGEbyaQQAUYCBDQC4B2bwxqezP3vW3/8+u3/qtq2T+59nT
-        8WhGB2Dnli0+Nqt+87eZbZv+L5+25z9I8+Jpe38Q1AwDIGf3VS79BNO8bOre/305i/9Oq1+jBFWCG8AD
-        DOpskOb+yiXgKOspW/hpWsVSQahSBEBOSKAw2JpW8ef2xbfgqGqqnP4HFucd9Wt+9ZQvOIvhDVAAwhLS
-        AU/fHaBYABkCiufm5nmy3XkLP7TVr/q1Z+Pd/7MbdnzDMARXOgB5B8TvKJ/JDwrY2fVbvmE1hNiU2Fex
-        5Pjs+m3fdm+4839C1/rv0HTChZKQjjs5LQXnBSendqheOAAp7i1ftr47Ey0vICckqGtIyI0MDAAHc3a+
-        BinDZgAAAABJRU5ErkJggg==
+        8WhGB2Dnli0+Nqt+87eZbZv+L5+25z9I8+Jpe38Q1AwDIGf3VS79BNO8bOre/30Zi/9Oq1+jBFWCG8AD
+        DOpskOb+yiXgKOspW/hpWsVSQahSBEBOSKAw2JpW8ef2xbfgqKqvnPwHFuct9Wt+9ZQvOIvhDVAAwhLS
+        AU/fHaBYABkCiufm5nmy3XkLPzTVr/q1Z+NdYMDu+IZhCK50APIOiN9RPpMfFLCz67d8w2oIsSmxr2LJ
+        8dn1277t3nDnf3/X+u/QdMKFkpCOOzktBecFJ6d2qF44ACnuLV+2vjsVLS8gJySoa0jIjQwMAJJxdnsX
+        TAczAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="tsbSelectSpectra.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
